--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,7 @@
-// $fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
-// @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
-// @import '~@fortawesome/fontawesome-free/scss/solid.scss';
-// @import '~@fortawesome/fontawesome-free/scss/brands.scss';
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/solid.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
 
 @import "./assets/sass/custom.scss",
         "./assets/sass/component/aside", 
