Fixed notfication dropdown

--- a/src/assets/sass/component/_header.scss
+++ b/src/assets/sass/component/_header.scss
@@ -32,6 +32,7 @@
         }
         .notification-dropdown-menu{
             width: 20rem;
+            margin-left: 4rem;
         }
         .profile_thumbnail,.language_icon{
             width: 2rem;
